JO-2008-09-03-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                 Bugster:     6743431
                 Issue:       2712
                 Review:      LP

JO-2008-09-02-0: Bugfix:      error() appears after 'Dbwriter configuration file' section in installation
                 Bugster:     6743621
                 Issue:       2713
                 Review:      AP

JO-2008-08-29-0: Bugfix:      parameters are not replaced during database connection test
                 Bugster:     6742976
                 Issue:       2708
                 Bugfix:      Correction of commit: AP-2008-08-14-0
                 Review:      AP

JO-2008-08-27-0: Bugfix:      reporting installation fails with SJWC 3.0.x if $JAVA_HOME is not set to java version at least 1.5
                 Bugster:     6740388
                 Issue:       2696
                 Bugfix:      dbwriter installation doesn't exit when an SQL error happens during database install/upgrade
                 Bugster:     6740404
                 Issue:       2697
                 Review:      AP

AP-2008-08-14-0: Bugfix:      Instalation script for reporting "assumes" correct
                              permission settings for instalation files
                 Bugster:     6734854
                 Issue:       2690
                 Review:      LP

LP-2008-08-13-0: Bugfix:      tr command has wrong replace arguments in some
                              places
                 Merged from: Maintrunk LP-2008-07-22-0
                 Bugster:     6728406
                 Issue:       2677
                 Review:      JO

MD-2008-08-13-0: CVS:         Created V61u5_TAG.
------------------------------------------------

JO-2008-08-05-0: RFE:         ARCo should support SJWC 3.1
                 Bugster:     6733626
                 Issue:       2683
                 Review:      AP
