@@ -1,3 +1,8 @@
+JO-2008-09-10-0: Bugfix:      dbwriter keeps crashing due to inability to close the open cursors   
+                 Bugster:     6745913
+                 Issue:       2722
+                 Review:      LP
+
 JO-2008-09-03-0: Bugfix:      dbwriter installation fails if admin_user in bootstrap file is 'none'    
                  Bugster:     6743431
                  Issue:       2712
